tests/golden/errors/unicodedata_not_decimal.py
import unicodedata

print(unicodedata.decimal("a"))
